<resources>
    <string name="app_name">SettingDemo</string>
    <string name="action_settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="usualSetting">UsualSetting</string>
    <string name="network">NetWork</string>
    <string name="device">Device</string>
    <string name="progress">Progress</string>
    <string name="system">System</string>
    <string name="safe">Safe</string>
    <string name="account_manager">AccountManager</string>
    <string name="openthosId">Openthos ID</string>
    <string name="emailAdress">xxxx@xxx.com</string>
    <string name="usernameOfownComputer">the computer username</string>
    <string name="user_name">Jerry</string>
    <string name="computerName">the computer name</string>
    <string name="jerryComputer">jerryComputer</string>
    <string name="progressManager">progressManager</string>
    <string name="buletooth">buletooth</string>
    <string name="switchbutton">switch</string>
    <string name="connectDevice">connectDevice</string>
    <string name="userfulDevice">usefulDevice</string>
    <string name="cloudService">cloud service</string>
    <string name="theTimeLastSync">the time last sync 2016-404-25 03:38:15</string>
    <string name="userResourceSync">user resource sync</string>
    <string name="applciationResouceSync">application resource sync</string>
    <string name="dateAndTime">date and time</string>
    <string name="timeConfirmAuto">time confirm of auto</string>
    <string name="timeareaConfrimAuto">timearea confirm of auto</string>
    <string name="timeSetting">timeSetting</string>
    <string name="time">2016-3-23 21:31</string>
    <string name="timeareaSetting">timeareaSetting</string>
    <string name="location">beijing</string>
    <string name="shown">shown</string>
    <string name="light">light</string>
    <string name="lightCount">85</string>
    <string name="project">project</string>
    <string name="systemFontSize">system font size</string>
    <string name="fontSituation">normal</string>
    <string name="wallpaper">wallPager</string>
    <string name="wallpaperChoose">wallpaper num1</string>
    <string name="energySavingSetting">energy saving setting</string>
    <string name="powerPlan">powerPlan</string>
    <string name="power_balance">powerBalance</string>
    <string name="power_energysaving">powerEnergySaving</string>
    <string name="power_efficient">powerEfficient</string>
    <string name="sleeping">sleeping</string>
    <string name="sleep_description1">after follow time the computer come to sleep when the power connect</string>
    <string name="sleep_description2">after follow time the computer come to sleep when the power unConnect</string>
    <string name="screen">screen</string>
    <string name="screen_description1">after follow time the screen come to shutdown when the power connect</string>
    <string name="screen_description2">after follow time the screen come to shutdown when the power unConnect</string>
    <string name="recoverDefault">recoverDefault</string>
    <string name="ethernet">ethernet</string>
    <string name="ipConfig">ip config</string>
    <string name="getIpAuto">auto</string>
    <string name="Ip">ip now is</string>
    <string name="ipNum">192.168.1.123</string>
    <string name="fireWall">fireWall</string>
    <string name="theListOfNet">the list of application which can conncet net</string>
    <string name="outCommunication">outCommunication</string>
    <string name="inCommunication">inCommunication</string>
    <string name="notifyManager">notifyManager</string>
    <string name="softCanNotify">the soft of notify</string>
    <string name="languageAndTypewriting">language and typewriting</string>
    <string name="language">language</string>
    <string name="simpleZN">simple chinese</string>
    <string name="typeWriting">typeWriting</string>
    <string name="sougou">the type writing of sogou</string>
    <string name="mouse">mouse</string>
    <string name="mouseSpeed">mouseSpeed</string>
    <string name="speedSolution">normal</string>
    <string name="openStartManager">openStartManager</string>
    <string name="showUp">showUp</string>
    <string name="systemUpgrade">systemUpgrade</string>
    <string name="systemReset">systemReset</string>
    <string name="theTpye">the type</string>
    <string name="typeName">tongfangT600</string>
    <string name="openthosVersionLabel">openthos version</string>
    <string name="openthosVersion">ver 1.445</string>
    <string name="androidVersionLabel">android version</string>
    <string name="androidVersion">5.1.1</string>
    <string name="kernelVersionLabel">kernel version</string>
    <string name="kernelVersion">3.0.1</string>
    <string name="browserVersionLabel">browser version</string>
     <string name="browserVersion">firefox 43.5</string>
    <string name="CPUVersionLabel">CPU</string>
    <string name="cpu">dragonHeart3 1.3GHZ</string>
    <string name="internalMemory">internalMemory</string>
    <string name="internalMemoryCount">8G</string>
    <string name="hardDisk">hardDisk</string>
    <string name="hardDiskCount">256 SSD</string>
    <string name="printerLabel">printer</string>
    <string name="printerManager">printer task manager</string>
    <string name="deviceAlreadyGet">theAlreadyGetDevice</string>
    <string name="addPrinterDevice">addPrinterDevice</string>
    <string name="proxySetting">proxySetting</string>
    <string name="serviceAddress">Service Address</string>
    <string name="serviceAddressNum">0.0.0.0</string>
    <string name="portLabel">port</string>
    <string name="portNum">80</string>
    <string name="save">save</string>
    <string name="reset">reset</string>
    <string name="runningMode">runningMode</string>
    <string name="selectByHand">selection</string>
    <string name="autoMode">autoMode</string>
    <string name="handMode">handMode</string>
    <string name="diskTableMode">diskTableMode</string>
    <string name="managerMode">managerMode </string>
    <string name="interruptNetLabel">the connection will all be interrupted when turn the insulate mode</string>
    <string name="vpnManger">vpn manager</string>
    <string name="alreadySavedVpn">already Saved Vpn</string>
    <string name="addNewVpn">add new vpn</string>
    <string name="ownVpn">own vpn</string>
    <string name="interruptLabel">already interrupt</string>
    <string name="WifiNet">wifi</string>
    <string name="usefulNet">useful net</string>
    <string name="insulateMode">InsulateMode</string>
    <string name="backToDefault">default</string>
    <string name="space"></string>
    <string name="wifiNetLabel">wifiNet</string>
    <string name="software">software1</string>
    <string name="on">on</string>

    <string name="projectSituation">project</string>
    <string name="theNowVersion">the now version</string>
    <string name="theNewestVersion">the newest version</string>
    <string name="theResetDescription">the system reset will clear all data,please make a copy before.</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="userDefined">userDefined</string>

    <string name="zone_list_menu_sort_alphabetically">Sort alphabetically</string>
    <!-- Menu item on Select time zone screen -->
    <string name="zone_list_menu_sort_by_timezone">Sort by time zone</string>

    <!-- Strings for Dialog yes button -->
    <string name="yes">"Yes"</string>

    <!-- Strings for Dialog no button -->
    <string name="no">"No"</string>

    <!-- Strings for Dialog create button -->
    <string name="create">Create</string>

    <!-- Strings for Dialog allow button -->
    <string name="allow">Allow</string>

    <!-- Strings for Dialog deny button -->
    <string name="deny">Deny</string>

</resources>
