<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/setting_right_titleFont_size"
        android:text="@string/ethernet"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/auto_toggle"
            android:background="@drawable/selector_butn_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOn="@string/space"
            android:textOff="@string/space"
            android:text="@string/space" />
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/switchbutton"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ipConfig"
        android:paddingTop="10dp"
        android:textSize="@dimen/setting_right_MiddleFont_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getIpAuto"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:textSize="@dimen/setting_right_MiddleFont_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Ip"
        android:paddingTop="10dp"
        android:textSize="@dimen/setting_right_MiddleFont_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipNum"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/setting_right_MiddleFont_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
</LinearLayout>