<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/setting_right_titleFont_size"
        android:text="@string/proxySetting"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/auto_toggle"
            android:background="@drawable/selector_butn_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOn="@string/space"
            android:textOff="@string/space"
            android:text="@string/space" />
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MiddleFont_size"
            android:text="@string/switchbutton"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_right_MiddleFont_size"
                android:layout_marginLeft="30dp"
                android:text="@string/serviceAddress"/>
            <EditText
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:textSize="@dimen/setting_right_MinFont_size"
                android:text="@string/serviceAddressNum"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_right_MiddleFont_size"
                android:layout_marginLeft="30dp"
                android:text="@string/portLabel"/>
            <EditText
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:textSize="@dimen/setting_right_MinFont_size"
                android:text="@string/portNum"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>