<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/setting_right_titleFont_size"
        android:text="@string/shown"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:id="@+id/detail_display_light"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MiddleFont_size"
            android:text="@string/light"/>
        <TextView
            android:id="@+id/light_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MinFont_size"
            android:text="@string/lightCount"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:id="@+id/detail_display_project"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MiddleFont_size"
            android:text="@string/project"/>
        <TextView
            android:id="@+id/projectInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MinFont_size"
            android:text="@string/projectSituation">
        </TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:id="@+id/detail_display_fontSize"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MiddleFont_size"
            android:text="@string/systemFontSize"/>
        <TextView
            android:id="@+id/fontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MinFont_size"
            android:text="@string/fontSituation"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line"/>

    <LinearLayout
        android:id="@+id/detail_display_wallPaper"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MiddleFont_size"
            android:text="@string/wallpaper"/>
        <TextView
            android:id="@+id/wallPaperInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_right_MinFont_size"
            android:text="@string/wallpaperChoose"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line"/>


</LinearLayout>
